# Exif-Data-Extractor

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/exif_extractor/: __init__.py  cli.py  exceptions.py  extractor.py  formatter.py  gps.py  gui.py  logger.py  scanner.py
tests/: __init__.py  test_extractor.py  test_gps.py
