[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exif-extractor"
version = "1.0.0"
description = "Production-grade EXIF metadata extraction toolkit"
readme = "README.md"
authors = [
    {name = "Osint Buddy", email = "osintbuddy.research@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "exif",
    "exifread"
]

[project.scripts]
exif-extract = "exif_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
